jquery 日历插件新增毁掉方法

--- a/calendar/demo.html
+++ b/calendar/demo.html
@@ -92,7 +92,11 @@
 	</div>
 	<script type="text/javascript">
 		$(function(){
-			$(".date").calendar();
+			$(".date").calendar({
+				callback:function(arr){
+					console.log(arr)
+				}
+			});
 		})
 	</script>
 </body>
