--- a/仿智联web端简历demo/2.求职意向-编辑.html
+++ b/仿智联web端简历demo/2.求职意向-编辑.html
@@ -6,7 +6,7 @@
     <meta name="format-detection" content="telephone=no, email=no"/>
     <meta name="renderer" content="webkit">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <title>行行圈编辑简历页面</title>
+    <title>编辑简历页面</title>
     <link href="css/base.css" rel="stylesheet" type="text/css" />
     <link href="css/style.css" rel="stylesheet" type="text/css" />
     <script type="text/javascript" src="js/jquery-1.8.3.min.js"></script>
