--- a/countdown/带手机验证倒计时.html
+++ b/countdown/带手机验证倒计时.html
@@ -5,17 +5,73 @@
 	<title>新增手机验证</title>
 	<script type="text/javascript" src="jquery-1.8.3.min.js"></script>
 	<script type="text/javascript" src="countdown2.js"></script>
-</head>
-<body>
-	<input type="text" data-count-down placeholder="请输入手机号码" value="21">
-	<input type="text" placeholder="请输入手机号码" value="22">
-	<div class="count">点击我倒计时<i></i></div>
+	<style type="text/css">
+		.demo{
+			margin-bottom:50px;
+		}
+		.err{
+			color:red;
+		}
+	</style>
 	<script type="text/javascript">
 		$(function(){
-			$('.count').CountDown({
+			$('input').on('click',  function() {
+				$('.err').html('');
+			});
+		})
+	</script>
+</head>
+<body>
+	<div class="demo">
+		<input type="text" data-count-down placeholder="请输入手机号码" >
+		<div class="count1">点击手机号码倒计时<i></i></div>
+		<div class="err err1"></div>
+	</div>
+	
+	<script type="text/javascript">
+		$(function(){
+			$('.count1').CountDown({
 	            data:'data-count-down',
-	            dataToggle:'alert',
+	            dataErr:'.err1',
 	            num:5,
+	            validateback:function(info, content){
+                    //info   当前手机号码 或者邮箱 
+                    //验证手机是否存在的回调函数，数组 [true/false, 错误提示]
+                    console.log(info);
+                    state = true;
+                    err = '手机不存在!!!!!!!!';
+                    content = [state, err];
+                    return content;
+                },
+	            callback:function(){
+	            	
+	            }
+	        });
+		})
+	</script>
+
+	<div class="demo">
+		<input type="text" data-count-mail placeholder="请输入手机号码">
+		<div class="count2">点击邮箱倒计时<i></i></div>
+		<div class="err err2"></div>
+	</div>
+	
+	<script type="text/javascript">
+		$(function(){
+			$('.count2').CountDown({
+				type:'mail',
+	            data:'data-count-mail',
+	            dataErr:'.err2',
+	            num:5,
+	            validateback:function(info, content){
+                    //info   当前手机号码 或者邮箱 
+                    //验证手机是否存在的回调函数，数组 [true/false, 错误提示]
+                    console.log(info);
+                    state = false;
+                    err = '邮箱不存在!!!!!!!!';
+                    content = [state, err];
+                    return content;
+                },
 	            callback:function(){
 	            	
 	            }
